--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </form>
         <div class="row">
           <div class='col'>
-            <button class='btn btn-primary'>Translate</button>
+            <button class='btn btn-primary col-lg-10 col-xs-10 col-md-10 col-sm-10'>Translate</button>
           </div>
         </div>
         </div>
