--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css"></link>
   <title>PIGIFY</title>
@@ -20,11 +20,11 @@
         <form class='form-control text-center english-form'>
           <h3 class='text-center'>Type some stuff and hit Enter to Pigify!</h3>
           <input autofocus type='text' name='english' label='Pig' />
-          <div class='col-lg-12 col-xs-12 col-md-12 col-sm-6'>
+          <div class='col-lg-12 col-xs-10 col-md-12 col-sm-12'>
             <p class=' text-justify pigLatin-output'></p>
         </form>
         <div class="row">
-          <div class='col'>
+          <div class='col-lg-12 col-xs-12 col-md-12 col-sm-12'>
             <button class='btn btn-primary col-lg-10 col-xs-10 col-md-10 col-sm-10'>Translate</button>
           </div>
         </div>
